--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "php": "^7.4",
+    "php": "^7.4|8.*",
     "nesbot/carbon": "^2.28",
     "spatie/enum": "^2.3",
     "tightenco/collect": "^6.9"
